--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-flow-renderer": "^10.3.17",
+    "react-scripts": "^0.0.0",
     "reactflow": "^11.8.3",
     "web-vitals": "^2.1.4"
   },
